--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,6 @@
     <link rel="preconnect" href="%REACT_APP_NODE_1%" />
     <link rel="preconnect" href="%REACT_APP_NODE_2%" />
     <link rel="preconnect" href="%REACT_APP_NODE_3%" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&family=Rubik:wght@300&display=swap"
-      rel="stylesheet"
-    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -23,7 +17,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="twitter:image" content="https://goosedefi.com/images/egg/hero.png" />
+    <!-- <meta name="twitter:image" content="https://twitter.com/FinancePalette/images/egg/logo.png" /> -->
     <meta
       name="twitter:description"
       content="The most popular AMM on BSC by user count! Earn BLUE through yield farming or win it in the Lottery, then stake it in Nests to earn more tokens! Initial Farm Offerings (new token launch model pioneered by Blue Finance), NFTs, and more, on a platform you can trust."
