--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css" />
     <!-- Meta -->
     <title>Blue Finance</title>
     <meta
