--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css" />
     <!-- Meta -->
-    <title>Blue Finance</title>
+    <title>Blueswap Finance</title>
     <meta
       name="description"
       content="Cheaper and faster than Uniswap? Discover Blue Finance, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for BLUE."
